--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Czitas Trraviezas</title>
-<meta content='https://imgur.com/hBUb3qm.png' property='og:image'/>
+<title>Nozxe de travezhuras</title>
+<meta content='https://cdn2.telediario.mx/uploads/media/2019/09/02/diablomorado.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
